--- a/components/home/OpenAI.module.css
+++ b/components/home/OpenAI.module.css
@@ -33,7 +33,7 @@
   font-size: 32px;
   line-height: 40px;
   font-weight: bold;
-  color: #202123;
+  color: #7d869c;
   margin: 16px 0 40px;
 }
 .main form {
@@ -43,10 +43,10 @@
 }
 .main input[type="text"] {
   padding: 12px 16px;
-  border: 1px solid #10a37f;
+  border: 1px solid #586994;
   border-radius: 4px;
   margin-bottom: 24px;
-  outline-color: #10a37f;
+  outline-color: #586994;
 }
 .main ::placeholder {
   color: #8e8ea0;
@@ -55,7 +55,7 @@
 .main input[type="submit"] {
   padding: 12px 0;
   color: #fff;
-  background-color: #10a37f;
+  background-color: #586994;
   border: none;
   border-radius: 4px;
   text-align: center;
